# OpenGL-Engine

./: CMakeLists.txt  Engine.cbp  Engine.layout  camera.cpp  camera.h  debug.cap  glad.c  indices.h  input.cpp  input.h  keystate.h  main  main.cpp  mesh.cpp  mesh.h  mesh_group.cpp  mesh_group.h  mouse.cpp  mouse.h  release.cap  renderdoc.cap  resources.cpp  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  triangle_mesh.cpp  triangle_mesh.h  vertex.h
Resources/Objects/: Dragon.mtl  Monkey.mtl  Something.mtl  Suzanne.mtl  teapot.mtl
Resources/Shaders/: funny.frag  normals.frag  normals.vert  rainbow.frag  rainbow.vert  shader.frag  shader.vert  unlit.frag  unlit.vert
include/engine/: camera.h  input.h  material.h  mesh.h  mesh_renderer.h  object_loader.h  resources.h  shader.h  sol.h  submesh.h  texture.h  vertex.h
include/glad/: glad.h
include/stb/: stb_image.h
src/: camera.cpp  input.cpp  mesh.cpp  mesh_renderer.cpp  mouse.cpp  object_loader.cpp  resources.cpp  shader.cpp  sol.cpp  submesh.cpp  texture.cpp  transform.cpp
